# django-app-forge

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.test  Makefile  README.md  apps.example.yaml  cliff.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  secret-scan.yml  sonar.yml
django_app_forge/: __init__.py  apps.py  generator.py
django_app_forge/management/commands/: forgeapps.py
examples/: perfect_api_view.py  perfect_repository.py  perfect_schema.py  perfect_serializer.py  perfect_service.py  perfect_viewset.py
examples/demo/: .gitignore  README.md  apps.yaml  manage.py
examples/demo/demo_project/: settings.py  urls.py
legal/: cgu.md  mentions-legales.md
schemas/: payment.schema.json  project.schema.json  user.schema.json
src/django_app_forge/: __init__.py  generator.py  naming.py  render.py  spec.py
tests/: settings.py  test_command.py  test_generator.py  test_golden.py  test_naming.py  test_render.py  test_spec.py
tests/golden/django/default/: sha256map.json
