[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-app-forge"
version = "0.1.0"
description = "Generate Django apps with a custom structure from a YAML file."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "chrysa", email = "greau.anthony+chrysa@gmail.com" }]
keywords = ["django", "scaffolding", "startapp", "yaml", "code-generation"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "Django>=4.2",
    "PyYAML>=6.0",
    "chrysa-codegen @ git+https://github.com/chrysa/chrysa-lib@10b75e142c0969ea5987b9f5684a1a89cd30c993#subdirectory=packages/python/codegen",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "mypy>=1.13.0",
    "django-stubs>=5.1.0",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/chrysa/django-app-forge"
Repository = "https://github.com/chrysa/django-app-forge"

[tool.setuptools.packages.find]
where = ["src"]
include = ["django_app_forge*"]

[tool.setuptools.package-data]
django_app_forge = ["py.typed"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=django_app_forge --cov-report=term-missing --cov-fail-under=85"
python_files = "test_*.py"
python_classes = "Test*"

[tool.ruff]
line-length = 120
# py313 (not py314): ruff format <=0.15.15 strips multi-except parens under py314 — restore when fixed upstream
target-version = "py313"
# examples/ holds an illustrative demo Django project, not library code.
extend-exclude = [".pytest_cache/*", "*.egg-info/*", ".ruff_cache/*", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["django_app_forge", "tests"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.run]
source = ["django_app_forge"]
omit = ["*/migrations/*"]
